# ckenc

./: .gitignore  README.md  pyproject.toml  test-secret.txt
src/: .gitignore
src/ckenc/: __init__.py  __main__.py  cli.py  crypto_engine.py
